--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,24 @@
-node_modules/
-jspm_packages/
-venv/
-.venv/
-env/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-dist/
-build/
-out/
-*.pyc
+node_modules
+dist
+dist-ssr
+*.local
 
-.env
-.env.local
-.env.*.local
-
-.vscode/
-.idea/
-*.swp
-
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
